# bitOS

./: .gitignore  Cargo.toml  README.md  build  run  setup-build
.cargo/: config
base/home/anon/: message
bit_std/src/: lib.rs  syscall.rs  syscalls.rs
bit_std/src/fs/: file.rs  structs.rs
dep/: Cargo.toml
dep/src/: consts.rs  lib.rs  syscall.rs
dep/src/fs/: error.rs  mod.rs
fs/: Cargo.toml  target.json
fs/src/: block.rs  copy.rs  error.rs  filesystem.rs  lib.rs  memory_devices.rs
fs/src/ffat/: mod.rs  structs.rs
fsimg/: Cargo.toml
fsimg/src/: main.rs
kernel/: Cargo.toml  target.json
kernel/src/: allocator.rs  asm.s  elf.rs  files.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  syscall.rs  syscall_handler.s  vga_buffer.rs
kernel/src/files/: mod.rs  virt.rs
kernel/src/fs/: mod.rs
kernel/src/fs/ffat/: mod.rs  structs.rs
kernel/src/fs/fffs/: bits.rs  block.rs  mod.rs  node.rs  superblock.rs
kernel/src/memory/: allocator.rs  heap.rs  map.rs  mod.rs
kernel/src/process/: mod.rs  schedule.rs  structs.rs
kernel/tests/: heap_allocation.rs  should_panic.rs  stack_overflow.rs
programs/init/: Cargo.toml  linker.ld  target.json
programs/init/src/: main.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/fs/: bs.rs  copy.rs  mod.rs  rfs.rs
src/fs/fffs/: bits.rs  block.rs  mod.rs  node.rs  perm.rs  pointer.rs  superblock.rs
std/: Cargo.toml
std/src/: allocator.rs  kprint.rs  lib.rs  syscall.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
(+3 files in other folders)
