[package]
name = "fs"
version = "0.1.0"
authors = ["Jonas Maier <1.jmaier.3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytevec = { git = "https://github.com/JM4ier/bytevec" }
dep = { path = "../dep" }

